# ULCS

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run_demo.cmd  run_demo.ps1  run_demo.sh
.github/workflows/: ci.yml  governance-v1.yml
docs/: ARTIFACT_CONTRACT_v0.6.md  ARTIFACT_SPEC_v0.6.md  CACHE_SPEC_v0.5.md  CAPABILITY_POLICY_v0.3.md  CHECKPOINT_RESUME_v0.6.md  EXECUTION_MANIFEST_v0.5.md  EXECUTION_TRACE_v0.4.md  HTTP_ADAPTER_v0.3.md  INPUT_ATTESTATION_TRANSPARENCY_SPEC_v0.9.md  INTENT_COMPILER_SPEC_v0.7.md  LOG_SPEC_v0.2.md  LOG_SPEC_v0.3.md  LOG_SPEC_v0.4.md  LOG_SPEC_v0.5.md  LOG_SPEC_v0.6.md  MVP_驗證報告_v0.1.md  PROVIDER_APPROVAL_SPEC_v0.8.md  RELEASE_CHECKLIST_v0.3.md  RELEASE_NOTES_v0.9.md  RELEASE_NOTES_v1.0.md  RELEASE_VALIDATION_v0.8.md  RESOURCE_POLICY_v0.4.md  RUNTIME_PLUGIN_SPEC_v0.3.md  TRUST_REGISTRY_RELEASE_SPEC_v1.0.md  VALIDATION_v0.3.md  VERSIONING.md
examples/: artifact_contract_v0.6.json  artifact_resume_v0.6.sos  cache_policy_v0.5.json  capability_policy_v0.3.json  dag_merge.sos  error_report.sos  http_capability_policy_v0.3.json  http_request_v0.3.sos  input_contract_v0.9.json  intent_request_v0.7.json  parallel_v0.4.sos  polyglot_v0.3.sos  provider_proposal_v0.8.json  provider_proposal_v0.9.json  resource_policy_v0.4.json
sos_mvp/: __init__.py  approval_cli.py  approved_cli.py  artifacts.py  attestations_v09.py  capabilities.py  cli.py  engine.py  executors.py  extensions.py  governance_cli.py  governance_v10.py  input_cli.py  inputs_v09.py  intent.py  intent_cli.py  model.py  parser.py  planner.py  provenance.py  provider_cli.py  release_cli.py  release_v10.py  resource_analysis.py  resources.py  review.py  signing_cli.py  sqlite_runtime.py  transparency_cli.py  transparency_v09.py  trusted_cli.py  v09_crypto.py
tests/: test_capabilities.py  test_dag.py  test_e2e.py  test_extensions.py  test_governance_v09.py  test_intent.py  test_parser.py  test_review.py  test_v04_runtime.py  test_v05_provenance.py  test_v06_artifact_quota.py  test_v06_artifact_schema_isolation.py  test_v06_artifacts.py  test_v10_governance.py
