[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ulcs-polyglot-terminal"
version = "0.7.0"
description = "Reference runtime and review-first Intent Compiler for Universal Language Composition Substrate"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Neo.K / EveMissLab"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
ulcs = "sos_mvp.cli:main"
sos-mvp = "sos_mvp.cli:main"
ulcs-intent = "sos_mvp.intent_cli:main"

[tool.setuptools]
packages = ["sos_mvp"]
