[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ulcs-polyglot-terminal"
version = "1.0.0"
description = "Reference runtime, intent compiler, trust registry, threshold approvals, witnesses, and governed release bundles for ULCS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["cryptography>=42"]
authors = [{name = "Neo.K / EveMissLab"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
ulcs = "sos_mvp.cli:main"
sos-mvp = "sos_mvp.cli:main"
ulcs-intent = "sos_mvp.intent_cli:main"
ulcs-provider = "sos_mvp.provider_cli:main"
ulcs-approve = "sos_mvp.approval_cli:main"
ulcs-approved = "sos_mvp.approved_cli:main"
ulcs-input = "sos_mvp.input_cli:main"
ulcs-sign = "sos_mvp.signing_cli:main"
ulcs-log = "sos_mvp.transparency_cli:main"
ulcs-trusted = "sos_mvp.trusted_cli:main"
ulcs-govern = "sos_mvp.governance_cli:main"
ulcs-release = "sos_mvp.release_cli:main"

[tool.setuptools]
packages = ["sos_mvp"]
